test/negative/007_pos_int64_overflow.err
007_pos_int64_overflow.fx:3:9: error: the numeric literal is out of range for the specified type
